# rust-jupyter-client

./: Cargo.toml
examples/: comm_info.rs  completion.rs  heartbeat.rs  hhh.rs  history.rs  inspect.rs  iopub_subscribe.rs  kernel_info.rs  run_code.rs
src/: client.rs  commands.rs  connection_config.rs  errors.rs  header.rs  lib.rs  metadata.rs  responses.rs  socket.rs  test_helpers.rs  wire.rs
