[package]
name = "jupyter-client"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "Jupyter client written in Rust"
homepage = "https://gitlab.com/srwalker101/rust-jupyter-client"
repository = "https://gitlab.com/srwalker101/rust-jupyter-client"
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/jupyter-client"
edition = "2021"

[dependencies]
zmq = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
#failure = "0.1.3"
anyhow = "1"
digest = "0.10"
#chrono = "0.4.6"
time = "0.3"
dirs = "5"
glob = "0.3"

[dev-dependencies]
#structopt = "0.2.13"
env_logger = "0.11"
crypto-mac = "0.7.0"
generic-array = "0.12.0"

#tauri sha2 0.10